# pyweb_hw13

./: .gitignore  README.md  docker-compose.yml  ip_blacklist_example.py  ip_block_user_agent.py  ip_whitelist_example.py  limits_example.py  main.py  pyproject.toml  test.db  unittest_example.py  unittest_example2.py  unittest_example3.py  unittest_example4_async.py  unittest_example6_path.py  unittext_example5_mock.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1804a39adfc2_init_next3.py  1f880c7b16ed_init.py  2b55ae8877f7_init.py  3f0f7c43c5c8_init_next4.py  4d6deef04cd2_init.py  5ce05a816010_init_next5.py  b3a77a717c7f_init_next.py  b45b1014f756_init.py  c4fd863b40d6_init.py  f76161e495c9_init_next2.py
src/: authentication.py  schemes.py
src/conf/: config.py  messages.py
src/database/: db_connect.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  avatar_uploads.py  email.py  pagination.py
templates/: base.html  index.html
templates/quoteapp/: about_author.html  about_quote.html  edit_author.html  edit_quote.html  edit_quote0.html  index.html  old_pre_quotes.html  the_search_result.html  top_10.html  upload_author.html  upload_quote.html
templates/users/: logout.html  password_reset_complete.html  password_reset_done.html  password_reset_email.html  signin.html  signup.html
tests/: conftest.py  test_root.py  test_route_auth.py  test_route_users.py  test_unit_repository_contacts.py
tl13/: authentication.py  main.py
tl13_2/src/: authentication.py  (+2 more)
(+8 files in other folders)
